k8s/infra/auth/oauth2-proxy/echoserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app: echoserver
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
