k8s/infra/auth/oauth2-proxy/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-url: "https://echo.emisia.net/oauth2/auth"
    ingress.kubernetes.io/auth-signin: "https://echo.emisia.net/oauth2/start"
    ingress.kubernetes.io/auth-headers-succeed: "X-Auth-*"
  name: echoserver
  namespace: oauth2-proxy
spec:
  ingressClassName: haproxy
  tls:
    - secretName: cert-echo-production
      hosts:
        - echo.emisia.net
  rules:
  - host: echo.emisia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
